--- a/hover-menu/CSS/style.css
+++ b/hover-menu/CSS/style.css
@@ -1,2 +1,45 @@
 @import url(reset.css);
-
+*{
+	box-sizing: border-box;
+}
+body{
+	margin: 0 ;
+	padding: 0;
+	font-family: sans-serif;
+	/*background: #000;*/
+}
+.container{
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+}
+.container .column{
+	width: 25%;
+	height: 100%;
+	float: left;
+	border-right:2px solid rgba(0,0,0,.5);
+	z-index: 1;
+}
+.container .column:last-child{
+	border-right:none;
+}
+.container .column .content{
+	position: relative;
+	height: 100%;
+}
+.container .column .content h1{
+	position: absolute;
+	top:50%
+	width: 100%;
+	transform: translateY(-50%);
+}
+.container .column .content .box{
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	padding: 40px;
+	background: rgba(255,255,255,1);
+	text-align: center;
+	transition:0.5s;
+	/*opacity:0;*/
+}
