--- a/hover-menu/CSS/style.css
+++ b/hover-menu/CSS/style.css
@@ -31,7 +31,15 @@ body{
 	position: absolute;
 	top:50%
 	width: 100%;
+	background: rgba(0,0,0,1);
 	transform: translateY(-50%);
+	margin: 0 ;
+	padding: 0;
+	color: rgba(255,255,255,.2);
+	font-size: 15em;
+	text-align: center;
+	border-top: 2px solid rgba(0,0,0,.5);
+	border-bottom: 2px solid rgba(0,0,0,.5);
 }
 .container .column .content .box{
 	position: absolute;
@@ -41,5 +49,32 @@ body{
 	background: rgba(255,255,255,1);
 	text-align: center;
 	transition:0.5s;
-	/*opacity:0;*/
+	opacity:1;
+
+}
+.container .column .content .box h2{
+	margin: 0 ;
+	padding: 0;
+	font-size: 30px;
+	color: #262626;
+}
+.container .column .content .box p{
+	color: #262626;
+	font-size:18px;
+}
+.container .column .bg{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+	z-index: -1;
+}
+.container .column .bg.bg1{
+	background: url(Img/street.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	transition: 0.5s;
 }
