--- a/hover-menu/CSS/style.css
+++ b/hover-menu/CSS/style.css
@@ -72,7 +72,7 @@ body{
 	z-index: -1;
 }
 .container .column .bg.bg1{
-	background: url(Img/street.jpg);
+	background: url(https://wokkta.github.io/JS_BASE/hover-menu/Img/street.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
